--- a/src/gui/packaging_warehouse/PACKAGING_WAREHOUSE_UI0001_TRANSACTIONS_JPANEL.form
+++ b/src/gui/packaging_warehouse/PACKAGING_WAREHOUSE_UI0001_TRANSACTIONS_JPANEL.form
@@ -398,13 +398,15 @@
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="pack_item_filter" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="pack_master_filter" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="user_filter" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="refresh_btn" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
                           <Component id="cancel_btn" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="pack_item_filter" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="pack_master_filter" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="user_filter" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
