--- a/src/gui/cra/CRA_UI0001_PRODUCTION_PLAN.form
+++ b/src/gui/cra/CRA_UI0001_PRODUCTION_PLAN.form
@@ -93,9 +93,11 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="planning_jtable">
           <Properties>
+            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="0" rowCount="4"/>
             </Property>
+            <Property name="cellSelectionEnabled" type="boolean" value="true"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
