--- a/src/gui/cra/CRA_UI0002_WIRE_MASTER_DATA.form
+++ b/src/gui/cra/CRA_UI0002_WIRE_MASTER_DATA.form
@@ -284,17 +284,15 @@
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="txt_stock" min="-2" pref="130" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="txt_harnessPart" max="32767" attributes="0"/>
-                          <Component id="combo_project" alignment="0" pref="132" max="32767" attributes="0"/>
-                          <Component id="txt_wireNo" alignment="0" max="32767" attributes="0"/>
-                          <Component id="txt_internalPart" max="32767" attributes="0"/>
-                          <Component id="txt_id" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="txt_harnessPart" max="32767" attributes="0"/>
+                      <Component id="combo_project" alignment="0" pref="132" max="32767" attributes="0"/>
+                      <Component id="txt_wireNo" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_internalPart" max="32767" attributes="0"/>
+                      <Component id="txt_id" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txt_stock" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="59" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -321,7 +319,7 @@
                           <Component id="txt_destWarehouse" min="-2" pref="130" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel21" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel20" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -338,8 +336,8 @@
                   <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="msg_lbl" min="-2" pref="803" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="msg_lbl" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -420,6 +418,7 @@
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="text" type="java.lang.String" value="#"/>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
             <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="combo_project"/>
             </Property>
